--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.13",
+    "axios": "^1.7.7",
     "firebase": "^10.14.1",
     "formik": "^2.4.6",
     "react": "^18.3.1",
